qa: fixed spacing in project cards

--- a/css/_skeleton.scss
+++ b/css/_skeleton.scss
@@ -132,7 +132,7 @@
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 body {
-  line-height: 1.6;
+  /*line-height: 1.6;*/
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
